log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-string-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-string-app
  template:
    metadata:
      labels:
        app: random-string-app
    spec:
      containers:
        - name: random-string-app
          image: hanhsant/random-string-app:v1.1.7 
          imagePullPolicy: Always
