log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-string-app-svc
spec:
  type: ClusterIP
  selector:
    app: random-string-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
